--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <section id="contact">
 <h2>Контакти</h2>
 <p style="text-align:center;">
-📍 місто Неіснуюче. Вулиця пекарень.<br>
+📍 місто Київ. Вулицю вкажу пізніше.<br>
 📞 +380 00 000 00 00<br>
 ⏰ Працюємо щодня: 8:00 – 20:00
 </p>
