--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="card">
 <h3>Тістечка</h3>
 <p>Солодкі десерти ручної роботи</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP_ooEnG9-79m1NDL3PToVfpL05bpLk98hWA&s">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP_ooEnG9-79m1NDL3PToVfpL05bpLk98hWA&s" weight=100 height=100>
 <h1>Супи</h1>
 <p> Суп харчо(ціна 160 грн за порцію) </p>
 <img src="https://images.gastronom.ru/ptXoeQ0-YZ5Bl6UDsNHRIJ0rxIso7q31WJEmODMzadI/pr:recipe-preview-image/g:ce/rs:auto:0:0:0/L2Ntcy9hbGwtaW1hZ2VzL2Y5MzAyZWJhLThjYjktNDE4ZC05MzY3LTYwMWI4MWYzYjdhOC5qcGc.webp">
