Added images style + new products

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <p>Ціна 70 грн за багет.</p>
                 </div>
                 <div class="card">
-                    <h3>Пиріжки з яблуком</h3>
-                    <img src="https://ua.yabpoela.net/uploads/posts/2025-02/1739294393.webp" alt="Пиріжки з яблуком">
-                    <p>Ціна 30 грн за пиріжок.</p>
+                    <h3>Чіабата з сиром</h3>
+                    <img src="">
+                    <p>Ціна 90 грн за чіабату.</p>
                 </div>
                 <div class="card">
                     <h3>Пампушки з вишнею</h3>
@@ -54,6 +54,7 @@
                     <h3>Круасани</h3>
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGt8LWf343a4lO5rWDixdF67m5IXYg0urTgA&s" alt="Круасани">
                     <p>Хрумкі, з шоколадом або кремом</p>
+                    <p>Ціна 40 грн за круасан</p>
                 </div>
                 <div class="card">
                     <h3>Тістечка з солоною карамеллю</h3>
@@ -116,6 +117,11 @@
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmAnhznmYwKBnHSF6L1pRcbArqS1F_EHhDMA&s" alt="Гречаний суп">
                     <p>Ціна 170 грн за порцію</p>
                 </div>
+                <div class="card">
+                    <h3>Гороховий суп</h3>
+                    <img src="">
+                    <p>Ціна 170 грн за порцію</p>
+                </div>
             </div>
         </section>
     </main>
@@ -134,3 +140,4 @@
     </footer>
 </body>
 </html>
+
