--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="card">
                     <h3>Чіабата з сиром</h3>
-                    <img src="">
+                    <img src="https://media.fozzyshop.ua/sku/961971/product/f447c059-fc7a-1382-9724-96a43a549019.webp">
                     <p>Ціна 90 грн за чіабату.</p>
                 </div>
                 <div class="card">
@@ -114,12 +114,12 @@
                 </div>
                 <div class="card">
                     <h3>Гречаний суп</h3>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRmAnhznmYwKBnHSF6L1pRcbArqS1F_EHhDMA&s" alt="Гречаний суп">
+                    <img src="https://images.gastronom.ru/rlqB1AbLQMZ5CLShdmTsBzTH4MuR0QdSZ7V_X6bTtSU/pr:recipe-cover-image/g:ce/rs:auto:0:0:0/L2Ntcy9hbGwtaW1hZ2VzLzkxZjI3YWExLTk5ODgtNDg5ZC1iMGNjLWQ4MDc0Yzg5ZmY5MS5qcGc.webp" alt="Гречаний суп">
                     <p>Ціна 170 грн за порцію</p>
                 </div>
                 <div class="card">
-                    <h3>Гороховий суп</h3>
-                    <img src="">
+                    <h3>Гарбузовий суп-пюре</h3>
+                    <img src="https://images.unian.net/photos/2021_09/thumb_files/1200_0_1632735872-8979.jpg">
                     <p>Ціна 170 грн за порцію</p>
                 </div>
             </div>
