Changed chiabata picture

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="card">
                     <h3>Чіабата з сиром</h3>
-                    <img src="https://media.fozzyshop.ua/sku/961971/product/f447c059-fc7a-1382-9724-96a43a549019.webp">
+                    <img src="https://ukr.media/static/ba/aimg/4/1/4/414247_1.jpg">
                     <p>Ціна 90 грн за чіабату.</p>
                 </div>
                 <div class="card">
